test/libpolynomial/syntaxTests/parsing/assembly_invalid_type.pol
contract C {
  function f() public pure {
    assembly "failasm" {}
  }
}
// ----
// ParserError: (55-64): Only "svmasm" supported.
